# looking-glass-app

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/models/: main.py
backend/src/routers/: main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  uploadImage.ts
frontend/src/components/: ImageInput.tsx  Message.tsx
