[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API written in FastAPI"
authors = ["Adam Smelkowski"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
boto3 = "^1.24.41"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^2.14.4"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
